--- a/app/src/main/res/layouts/activity/layout/activity_charactere_display.xml
+++ b/app/src/main/res/layouts/activity/layout/activity_charactere_display.xml
@@ -340,14 +340,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/buttonNext"
+                android:id="@+id/buttonDel"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                 android:drawableTint="#db3812"
-                android:onClick="onNextButtonClick"
-                android:text="Next"
+                android:onClick="delete"
+                android:text="Suppr"
                 android:textColor="#db3812"
                 android:textSize="@dimen/_8sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
