--- a/app/src/main/res/layouts/activity/layout/activity_character_display.xml
+++ b/app/src/main/res/layouts/activity/layout/activity_character_display.xml
@@ -35,6 +35,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="CharacterName" />
 
+            <ImageView
+                android:id="@+id/imageViewAvatar"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_200sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/name"
+                android:scaleType="fitCenter"
+                tools:srcCompat="@drawable/avatar_barbarian" />
+
             <TextView
                 android:id="@+id/race"
                 android:layout_width="wrap_content"
@@ -44,7 +54,7 @@
                 android:fontFamily="@font/balthazar"
                 android:textSize="@dimen/_20sdp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
                 tools:text="Race" />
 
             <TextView
